--- a/views/resultaten.ejs
+++ b/views/resultaten.ejs
@@ -4,11 +4,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color">
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/styleEnquete.css" />
     <title>Enquete Minor Webdesign and Development</title>
 </head>
 <body>
-<main>
     <header>
         <h1>Bedankt voor het invullen van de enquete!</h1>
     </header>
@@ -18,7 +17,6 @@
             voor leerdoelen  
         </p>
     </main>
-</main>
 </body>
 
 <%- include('./partials/foot') %>
