--- a/views/enquete-css.ejs
+++ b/views/enquete-css.ejs
@@ -4,16 +4,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color">
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/styleEnquete.css" />
     <script src="./javascript/CssToTheRescue.js" defer></script>
     <title>Enquete Minor Webdesign and Development</title>
 </head>
 
-<!-- CSS to the rescue -->
+<header>
+    <h1>CSS to the Rescue</h1>
+</header>
 
 <main>
-    <section id="centreren">
-<form id="cssRescue" method="post" enctype="application/x-www-form-urlencoded" action="/enquete-pwa">
+<form method="post" enctype="application/x-www-form-urlencoded" action="/enquete-pwa">
     <fieldset>
         <h2>2. CSS to the Rescue</h2>
         <h3>Vul hier jouw naam in</h3>
@@ -67,10 +68,9 @@
     <textarea id="css-reactie" name="reactie" rows="4" cols="50" required placeholder="Schrijf hier wat jij want het vak vond of bijvoorbeeld een leuke toevoeging">
     </textarea>
     </fieldset>
-    </fieldset>
-    <section id="submit">
+    <section id="start">
     <a id="submit" href="/enquete-pwa">
-        <input id="submitBtn" type="submit" value="Volgende vak">
+        <input id="starten" type="submit" value="Volgende vak">
     </a>
     </section>
 </form>
