--- a/views/enquete-pwa.ejs
+++ b/views/enquete-pwa.ejs
@@ -4,18 +4,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color">
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/styleEnquete.css" />
     <script src="./javascript/pwa.js" defer></script>
     <title>Enquete Minor Webdesign and Development</title>
 </head>
-
+<header>
+    <h1>Progressive Web Apps</h1>
+</header>
 <!-- Values veranderen naar PWA!!!!-->
 <main>
-    <section id="centreren">
-<form id="pwa" method="post" enctype="application/x-www-form-urlencoded" action="/enquete-browser">
+<form method="post" enctype="application/x-www-form-urlencoded" action="/enquete-browser">
     <fieldset>
-        <!-- Web app from scratch -->
-        <h2>3. Progressive Web Apps</h2>
         <h3>Vul hier jouw naam in</h3>
         <input id="pwa-naam" type="text" placeholder="Vul hier jouw naam in..." name="naam" required>
         <h3>Docenten van PWA</h3>
@@ -67,9 +66,9 @@
     <textarea id="pwa-reactie" name="reactie" rows="4" cols="50" required placeholder="Schrijf hier wat jij want het vak vond of bijvoorbeeld een leuke toevoeging">
     </textarea>
     </fieldset>
-    <section id="submit">
-    <a id="submit" href="/enquete-browser">
-        <input id="submitBtn" type="submit" value="Volgende vak">
+    <section id="start">
+    <a href="/enquete-browser">
+        <input id="starten" type="submit" value="Volgende vak">
     </a>
 </section>
 </form>
